# reservoirgrid

./: pyproject.toml
research/Input_Discretization/: 3Dplots.py  Batched_sweep.py  DivergenceAnalysis.py  Heatmaps.py  TimeForDifferentCalculations.md  divergence_analysis.ipynb
research/Lorenz/: LorenzPred.py  ThickLorenz.ipynb
src/reservoirgrid/models/: Reservoir.py
