[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reservoirgrid"
version = "0.1.0"
description = "Reservoir Computing library for chaotic and dynamical systems"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy~=2.2.1",
    "pandas~=2.2.3",
    "matplotlib~=3.10.0",
    "scipy~=1.15.1",
    "seaborn~=0.13.2",
    "torch~=2.5.1",
    "scikit-learn~=1.6.1",
    "qutip~=5.1.1",
    "plotly~=6.0.1",
    "optuna",
]

[tool.setuptools.packages.find]
where = ["src"]
